# langChainDemo

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: agent.py  multiChain.py  myChain.py  openRouter.py  rag.py  server.py
app/data/: cwit2020.md
brunoapi/: agent.bru  bruno.json  collection.bru  multichain.bru  openrouter.bru  pirate.bru  rag.bru  route.bru  simple.bru
copilot/langchain-demo-svc/: manifest.yml
evaluation/: sampleEvaluator.py  smapleEvaluator.py
