[tool.poetry]
name = "langChainDemo"
version = "0.1.0"
description = "Small demo of building AI apps with LangChain"
authors = ["Juan Peredo <jperedo@bolbeck.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.1.0"}
langchain-openai = "^0.1.3"
pirate-speak = {path = "packages/pirate-speak", develop = true}
pydantic = "1.10.13"
langchainhub = "^0.1.15"
sentence-transformers = "^2.7.0"
qdrant-client = "^1.9.0"
langchain = "^0.1.16"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
